# graphql-core-promise

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
.github/workflows/: test.yaml  test.yml
graphql_core_promise/: __init__.py
graphql_core_promise/execute/: __init__.py  promise.py
tests/: test_execute.py  test_resolve.py
