[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphql-core-promise"
dynamic = ["version"]
description = "Add support for promise-based dataloaders and resolvers to graphql-core v3+"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Cormier-Iijima", email = "sam@fellow.co" },
    { name = "Shen Li", email = "dustet@gmail.com" },
]
license = { text = "BSD-3-Clause" }
dependencies = ["graphql-core>=3.2", "promise>=2.3"]

[project.optional-dependencies]
dev = ["mypy~=1.9", "pytest~=8.2", "pytest-benchmark~=4.0", "ruff~=0.4"]

[tool.setuptools]
packages = ["graphql_core_promise"]

[tool.setuptools_scm]

[tool.ruff.lint]
select = [
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["COM812"]
preview = true

[tool.ruff.format]
preview = true
